Cabal-Version:       3.8
Name:                vandyland
Version:             1.1
Category:            Web
Stability:           Experimental
Build-type:          Simple

Executable vandyland
  hs-source-dirs:      app
  main-is:             Main.hs
  GHC-Options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-import-lists
    -Wredundant-constraints
    -fno-warn-name-shadowing
    -funbox-strict-fields
    -threaded
    -O2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       bizzlelude,
                       snap-core,
                       snap-server >= 1.1.1   && < 1.2.0,
                       vandyland

Library
  hs-source-dirs:      src/main
  exposed-modules:     Vandyland.BadgerState.Controller, Vandyland.Gallery.Controller
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  other-modules:       Vandyland.BadgerState.Database, Vandyland.BadgerState.Datum, Vandyland.Common.SnapHelpers, Vandyland.Common.DBCredentials, Vandyland.Gallery.Comment, Vandyland.Gallery.Database, Vandyland.Gallery.NameGen, Vandyland.Gallery.Submission
  GHC-Options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-import-lists
    -Wredundant-constraints
    -fno-warn-name-shadowing
    -funbox-strict-fields
    -O2
  Build-depends:
    aeson                     >= 2.1.2   && < 2.2.0,
    bifunctors                >= 5.5.15  && < 5.6,
    bizzlelude                >= 4.17.2  && < 4.18.0,
    bytestring                >= 0.11.5  && < 0.12.0,
    containers                >= 0.6.7   && < 0.7.0,
    directory                 >= 1.3.7   && < 1.4.0,
    file-embed                >= 0.0.15  && < 0.1.0,
    io-streams                >= 1.5.2   && < 1.6.0,
    lens                      >= 5.2.3   && < 5.3.0,
    monad-logger              >= 0.3.40  && < 0.4.0,
    persistent                >= 2.14.6  && < 2.15.0,
    persistent-postgresql     >= 2.13.6  && < 2.14.0,
    persistent-template       >= 2.12.0  && < 2.13.0,
    random                    >= 1.2.1   && < 1.3,
    resourcet                 >= 1.2.6   && < 1.3.0,
    snap-core                 >= 1.0.5   && < 1.1.0,
    text                      >= 2.0.2   && < 2.1.0,
    time                      >= 1.12.2  && < 1.13,
    transformers              >= 0.5.6   && < 0.6.0,
    uuid                      >= 1.3.15  && < 1.4.0,
    validation                >= 1.1.3   && < 1.2.0,
    zlib                      >= 0.6.3   && < 0.7.0

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   src/test
  default-language: Haskell2010
  build-depends:
    test-framework             >= 0.8,
    test-framework-hunit       >= 0.3
