Cabal-Version:       3.8
Name:                vandyland
Version:             1.1
Category:            Web
Stability:           Experimental
Build-type:          Simple

Common common
  Default-Language:   GHC2010
  Default-Extensions: OverloadedRecordDot, OverloadedStrings
  Build-Depends:
    bizzlelude >= 4.17.2 && < 4.18.0,
  GHC-Options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-import-lists
    -Wredundant-constraints
    -fno-warn-name-shadowing
    -funbox-strict-fields
    -threaded
    -O2

Executable vandyland
  Import:         common
  Hs-Source-Dirs: app
  Main-Is:        Main.hs
  Build-Depends:
    snap-core,
    snap-server >= 1.1.2 && < 1.2.0,
    vandyland

Library
  Import:         common
  Hs-Source-Dirs: src/main
  Exposed-Modules:
    Vandyland.BadgerState.Controller,
    Vandyland.Gallery.Controller
  Other-Modules:
    Vandyland.BadgerState.Database,
    Vandyland.BadgerState.Datum,
    Vandyland.Common.DBCredentials,
    Vandyland.Common.SnapHelpers,
    Vandyland.Gallery.Auth,
    Vandyland.Gallery.Comment,
    Vandyland.Gallery.Database,
    Vandyland.Gallery.PassGen,
    Vandyland.Gallery.Submission,
    Vandyland.Gallery.WebReq
  Build-Depends:
    aeson                     >= 2.1.2   && < 2.2.0,
    bifunctors                >= 5.5.15  && < 5.6,
    bizzlelude                >= 4.17.2  && < 4.18.0,
    bytestring                >= 0.11.5  && < 0.12.0,
    containers                >= 0.6.7   && < 0.7.0,
    directory                 >= 1.3.7   && < 1.4.0,
    file-embed                >= 0.0.15  && < 0.1.0,
    io-streams                >= 1.5.2   && < 1.6.0,
    lens                      >= 5.2.3   && < 5.3.0,
    monad-logger              >= 0.3.40  && < 0.4.0,
    persistent                >= 2.14.6  && < 2.15.0,
    persistent-postgresql     >= 2.13.6  && < 2.14.0,
    persistent-template       >= 2.12.0  && < 2.13.0,
    random                    >= 1.2.1   && < 1.3,
    resourcet                 >= 1.2.6   && < 1.3.0,
    snap-core                 >= 1.0.5   && < 1.1.0,
    text                      >= 2.0.2   && < 2.1.0,
    time                      >= 1.12.2  && < 1.13,
    transformers              >= 0.5.6   && < 0.6.0,
    uuid                      >= 1.3.15  && < 1.4.0,
    validation                >= 1.1.3   && < 1.2.0,
    zlib                      >= 0.6.3   && < 0.7.0

test-suite tests
  Type:             exitcode-stdio-1.0
  Main-Is:          Main.hs
  Hs-Source-Dirs:   src/test
  Default-Language: Haskell2024
  Build-Depends:
    test-framework             >= 0.8,
    test-framework-hunit       >= 0.3
