Cabal-Version:       3.8
Name:                vandyland
Version:             1.1
Category:            Web
Stability:           Experimental
Build-type:          Simple

Common common
  Default-Language:   GHC2024
  Default-Extensions: OverloadedRecordDot, OverloadedStrings
  Build-Depends:
    bizzlelude >= 4.20.2.0.1 && < 4.21.0,
  GHC-Options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-import-lists
    -Wredundant-constraints
    -fno-warn-name-shadowing
    -funbox-strict-fields
    -threaded
    -O2

Executable vandyland
  Import:         common
  Hs-Source-Dirs: app
  Main-Is:        Main.hs
  Build-Depends:
    snap-core,
    snap-server >= 1.1.2 && < 1.2.0,
    vandyland

Library
  Import:         common
  Hs-Source-Dirs: src/main
  Exposed-Modules:
    Vandyland.BadgerState.Controller,
    Vandyland.Gallery.Controller
  Other-Modules:
    Vandyland.BadgerState.Database,
    Vandyland.BadgerState.Datum,
    Vandyland.Common.DBCredentials,
    Vandyland.Common.SnapHelpers,
    Vandyland.Gallery.Comment,
    Vandyland.Gallery.Database,
    Vandyland.Gallery.NameGen,
    Vandyland.Gallery.Submission
  Build-Depends:
    aeson                     >= 2.2.3   && < 2.3.0,
    bifunctors                >= 5.6.2   && < 5.7,
    bytestring                >= 0.12.2  && < 0.13.0,
    case-insensitive          >= 1.2.1   && < 1.3.0,
    containers                >= 0.7     && < 0.8.0,
    directory                 >= 1.3.8   && < 1.4.0,
    file-embed                >= 0.0.16  && < 0.1.0,
    http-conduit              >= 2.3.8   && < 2.4.0,
    io-streams                >= 1.5.2   && < 1.6.0,
    lens                      >= 5.3.5   && < 5.4.0,
    monad-logger              >= 0.3.42  && < 0.4.0,
    pcre-heavy                >= 1.0.0   && < 1.1.0,
    persistent                >= 2.17.1  && < 2.18.0,
    persistent-postgresql     >= 2.13.7  && < 2.14.0,
    persistent-template       >= 2.12.0  && < 2.13.0,
    random                    >= 1.2.1   && < 1.3,
    resourcet                 >= 1.3.0   && < 1.4.0,
    snap-core                 >= 1.0.5   && < 1.1.0,
    text                      >= 2.1.3   && < 2.2.0,
    time                      >= 1.12.2  && < 1.13,
    transformers              >= 0.6.1   && < 0.7.0,
    uuid                      >= 1.3.16  && < 1.4.0,
    validation                >= 1.1.3   && < 1.2.0,
    zlib                      >= 0.7.1   && < 0.8.0

test-suite tests
  Import:         common
  Type:           exitcode-stdio-1.0
  Main-Is:        Main.hs
  Hs-Source-Dirs: src/test
  Build-Depends:
    HUnit                >= 1.6.2 && < 1.7.0,
    test-framework       >= 0.8,
    test-framework-hunit >= 0.3
